 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4884: Tez needs to use DistinctCombiner.Combine (rohini)

PIG-4874: Remove schema tuple reference overhead for replicate join hashmap (rohini)

PIG-4879: Pull latest version of joda-time (rohini)

PIG-4526: Make setting up the build environment easier (nielsbasjes via rohini)

PIG-4641: Print the instance of Object without using toString() (sandyridgeracer via rohini)

PIG-4455: Should use DependencyOrderWalker instead of DepthFirstWalker in MRPrinter (zjffdu via rohini)

PIG-4866: Do not serialize PigContext in configuration to the backend (rohini)

PIG-4547: Update Jython version to 2.7.0 (erwaman via daijy)

PIG-4862: POProject slow by creating StackTrace repeatedly (knoguchi)

PIG-4853: Fetch inputs before starting outputs (rohini)

PIG-4847: POPartialAgg processing and spill improvements (rohini)

PIG-4840: Do not turn off UnionOptimizer for unsupported storefuncs in case of no vertex groups (rohini)

PIG-4843: Turn off combiner in reducer vertex for Tez if bags are in combine plan (rohini)

PIG-4796: Authenticate with Kerberos using a keytab file (nielsbasjes via daijy)

PIG-4817: Bump HTTP Logparser to version 2.4 (nielsbasjes via daijy)

PIG-4811: Upgrade groovy library to address MethodClosure vulnerability	(daijy)

PIG-4803: Improve performance of regex-based builtin functions (eyal via daijy)

PIG-4802: Autoparallelism should estimate less when there is combiner (rohini)

PIG-4761: Add more information to front end error messages (eyal via daijy)

PIG-4792: Do not add java and sun system properties to jobconf (rohini)

PIG-4787: Log JSONLoader exception while parsing records (rohini)
