@@ -29,6 +29,7 @@ import java.util.Set;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.pig.PigConfiguration;
+import org.apache.pig.StoreFunc;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.PhysicalOperator;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.POUserFunc;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.plans.PhysicalPlan;
@@ -120,10 +121,25 @@ public class UnionOptimizer extends TezOpPlanVisitor {
     public static boolean isOptimizableStoreFunc(TezOperator tezOp,
             List<String> supportedStoreFuncs, List<String> unsupportedStoreFuncs)
             throws VisitorException {
-        if (supportedStoreFuncs != null || unsupportedStoreFuncs != null) {
-            List<POStoreTez> stores = PlanHelper.getPhysicalOperators(tezOp.plan, POStoreTez.class);
-            for (POStoreTez store : stores) {
-                String name = store.getStoreFunc().getClass().getName();
+        List<POStoreTez> stores = PlanHelper.getPhysicalOperators(tezOp.plan, POStoreTez.class);
+
+        for (POStoreTez store : stores) {
+            String name = store.getStoreFunc().getClass().getName();
+            if (store.getStoreFunc() instanceof StoreFunc) {
+                StoreFunc func = (StoreFunc) store.getStoreFunc();
+                if (func.supportsParallelWriteToStoreLocation() != null) {
+                    if (func.supportsParallelWriteToStoreLocation()) {
+                        continue;
+                    } else {
+                        LOG.warn(name + " does not support union optimization."
+                                + " Disabling it. There will be some performance degradation.");
+                        return false;
+                    }
+                }
+            }
+            // If StoreFunc does not explicitly state support, then check supported and
+            // unsupported config settings.
+            if (supportedStoreFuncs != null || unsupportedStoreFuncs != null) {
                 if (unsupportedStoreFuncs != null
                         && unsupportedStoreFuncs.contains(name)) {
                     return false;
